<resources>
    <string name="app_name">Pondoku</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter New Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="donthave_account">Don\'t Have Account</string>
    <string name="signup">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="signup_failed2">Signup Failed : %1$s</string>
    <string name="failed_to_update_profile">Failed to update profile : %1$s</string>
    <string name="user_created_successfully">User Created Successfully</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_following">Following</string>
    <string name="dashboard_add">Add</string>
    <string name="dashboard_sharing">Sharing</string>
    <string name="dashboard_settings">Settings</string>
    <string name="view_all_habits">Habits</string>
    <string name="view_all_habit_events">Habit Events</string>
    <string name="chosen_day_habit_title">Chosen Day Habit</string>
    <string name="home_image_description">design image for home view</string>
    <string name="home_instructions">Get a clear view of your day.\n \n Click a date on the calendar to see your Islamic habits for that day.\n \n Tap + to add a habit.</string>
    <string name="day_habits_title_activity">Habits Title</string>
    <string name="habit_event_title_activity">Habit Events Title</string>
    <string name="done">DONE</string>
    <string name="example_motivation_day_habits">Motivation \n Example motivation</string>
    <string name="example_toast">Example toast</string>
    <string name="add_habit_event_title">Add Event Title</string>
    <string name="day_habits_info_text">Make sure to click DONE to show your progress!</string>
    <string name="add_habit_event_info">Add a habit event to celebrate your progress!</string>
    <string name="add_habit_event_comment">Comment</string>
    <string name="comment_hint">Add an optional comment (up to 20 characters)</string>
    <string name="great_job">Great Job!</string>
    <string name="motivation">Motivation</string>
    <string name="habit_event_comment">Habit Events Comment</string>
    <string name="frequency">Frequency</string>
    <string name="starting_date">Starting Date</string>
    <string name="privacy">Privacy</string>
    <string name="events">Events</string>
    <string name="title">Title</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="visual">VIEW VISUAL</string>
    <string name="visual_indicator">Visual Indicator</string>
    <string name="choose_a_year">Choose a Year</string>
    <string name="are_you_sure_you_want_to_delete_this_habit">Are you sure you want to delete this habit?</string>
    <string name="delete">DELETE</string>
    <string name="following_name">FOLLOWING NAME</string>
    <string name="uid">uid:</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_key">Map Key</string>
    <string name="password_changed_successfully">Alhamdulillah! Password Changed!</string>
    <string name="something_went_wrong">Ooops! Something Went Wrong!</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password_instructions_sent">Reset Password Instructions Sent to your Email: %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="retry">Retry</string>
    <string name="email_sent_failed">Sorry! Failed to send email: %1$s</string>
</resources>